--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-nodemon": "^2.0.4",
-    "mongoose": "^4.1.7"
+    "mongoose": "^4.1.7",
+    "body-parser": "~1.14.0"
   }
 }
